// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test case for snapshot for single expense 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling  
    $2.35
  </h1>
</div>
`;

exports[`test case for snapshot of this component 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling  
    $2.35
  </h1>
</div>
`;
